<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.navercorp.pinpoint</groupId>
        <artifactId>pinpoint-plugins</artifactId>
        <version>3.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>pinpoint-jdk-httpclient-plugin</artifactId>
    <name>pinpoint-jdk-httpclient-plugin</name>
    <packaging>jar</packaging>

    <properties>
        <jdk.version>11</jdk.version>
        <jdk.home>${env.JAVA_11_HOME}</jdk.home>
        <plugin.clover.skip>true</plugin.clover.skip>
        <plugin.animal-sniffer.skip>true</plugin.animal-sniffer.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.navercorp.pinpoint</groupId>
            <artifactId>pinpoint-bootstrap-core</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports=java.net.http/jdk.internal.net.http=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --add-exports java.net.http/jdk.internal.net.http=ALL-UNNAMED
                        -Dfile.encoding=${project.build.sourceEncoding}
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
